# algorithms

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yaml  unit-tests.yml
notebooks/: attributionModel.ipynb  textSummarizer.ipynb
src/: api_server.py  app.py  data.py  fine_tune.py  model_extractors.py  stop_watch.py  test_dummy.py  upload_to_hf.py  val.py
src/models/: dummy.py  qa.py
tests/: test_sample.py
