[tool.poetry]
name = "choosistant-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numba = { version = "^0.56.2", source = "pypi" }
nltk = { version = "^3.7", source = "pypi" }
torch = [
  {version = "^1.12.1", platform = "darwin", source="pypi"},
  {version = "^1.12.1",platform = "linux",source = "torch" }
]
torchvision = [
  { version = "^0.13.1",platform = "darwin", source="pypi"},
{ version = "^0.13.1",platform = "linux", source="torch"}
]
huggingface-hub = { version = "^0.10.0", source = "pypi" }
pytorch-lightning = { version = "^1.7.7", source = "pypi" }
transformers = { version = "^4.22.1", source = "pypi" }
evaluate = { version = "^0.2.2", source = "pypi" }
fastapi = "^0.85.0"
pydantic = "^1.10.2"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
default = false
secondary = true
indexed = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
